# rasica

./: .gitignore  00A-Phase1-Core-Foundation-Implementation-Spec.md  00B-Phase2-Dataset-Engine-Implementation-Spec.md  00C-Phase3-Data-Ingestion-Implementation-Spec.md  00D-Phase4-Validation-Engine-Implementation-Spec.md  00E-Phase5-Structural-Inference-Implementation-Spec.md  00F-Phase6-Knowledge-Engine-Implementation-Spec.md  Cargo.toml  README  README.md  clippy.toml  deny.toml  justfile  rasica-v2.md  rustfmt.toml  setup_rasica.sh  setup_rasica_phase2.sh  setup_rasica_phase3.sh  setup_rasica_phase4.sh  setup_rasica_phase5.sh
.config/: nextest.toml
.github/workflows/: ci.yml
crates/rasica-common/: Cargo.toml
crates/rasica-common/src/: error.rs  id.rs  lib.rs  logging.rs  version.rs
crates/rasica-common/src/config/: error.rs  layers.rs  mod.rs
crates/rasica-core/: Cargo.toml
crates/rasica-core/src/: fingerprint.rs  identity.rs  lib.rs  mutability.rs  prelude.rs
crates/rasica-dataset/: Cargo.toml
crates/rasica-dataset/benches/: dataset_construction.rs
crates/rasica-dataset/src/: dataset.rs  error.rs  lib.rs  metadata.rs  prelude.rs  row.rs  schema.rs  source.rs  value.rs
crates/rasica-ingestion/: Cargo.toml
crates/rasica-ingestion/benches/: csv_ingestion.rs
crates/rasica-ingestion/src/: csv.rs  encoding.rs  error.rs  excel.rs  ingest.rs  json.rs  lib.rs  prelude.rs  typing.rs
crates/rasica-ingestion/tests/: round_trip.rs
crates/rasica-ingestion/tests/fixtures/: invalid_encoding.csv  utf8_bom.csv  well_formed.csv  well_formed.json  well_formed.xlsx
crates/rasica-structural-inference/: Cargo.toml
crates/rasica-structural-inference/benches/: structural_inference.rs
crates/rasica-structural-inference/src/: category.rs  dataset_view.rs  distribution.rs  error.rs  knowledge.rs  lib.rs  prelude.rs  relationship.rs  role.rs  temporal_format.rs  value_key.rs
crates/rasica-structural-inference/tests/: accuracy.rs
crates/rasica-structural-inference/tests/fixtures/: customers_ground_truth.csv  ground_truth.json  sensor_readings_ground_truth.csv
crates/rasica-validation/: Cargo.toml
crates/rasica-validation/benches/: validation.rs
crates/rasica-validation/src/: constraint.rs  dataset_view.rs  datatype_check.rs  duplicate_detection.rs  error.rs  finding.rs  integrity_check.rs  lib.rs  null_analysis.rs  prelude.rs  report.rs  schema_check.rs  validate.rs  value_key.rs
crates/rasica-validation/tests/: fault_injection.rs
tests/workspace_smoke/: Cargo.toml
tests/workspace_smoke/tests/: smoke.rs
