[package]
name = "rasica-ingestion"
description = "External-source readers (CSV, Excel, JSON) producing rasica-dataset Datasets."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
rasica-common = { path = "../rasica-common", version = "0.1.0" }
rasica-core = { path = "../rasica-core", version = "0.1.0" }
rasica-dataset = { path = "../rasica-dataset", version = "0.1.0" }
thiserror = { workspace = true }
csv = { workspace = true }
calamine = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "csv_ingestion"
harness = false
